--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -1,6 +1,6 @@
 <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Book Store Admin</a>
+                <a class="navbar-brand" href="#"><span style="color:darkgreen">Book Store Admin</span></a>
                 <button
                     class="navbar-toggler"
                     type="button"
