--- a/views/homeLayout.hbs
+++ b/views/homeLayout.hbs
@@ -12,7 +12,7 @@
             crossorigin="anonymous"
         />
 
-        <title>Hello, world!</title>
+        <title>Book Store</title>
     </head>
     <body>
         {{#if admin}}
