--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,6 +1,6 @@
 <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Book Store User</a>
+                <a class="navbar-brand" href="#"><span style="color: darkgreen;">Book Store User</span></a>
                 <button
                     class="navbar-toggler"
                     type="button"
